--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mate-academy.github.io/react-users-board",
+  "homepage": "https://Olexandr6.github.io/react-users-board",
   "name": "users_board_client",
   "version": "0.1.0",
   "dependencies": {
